# docstrings

./: README.md  docstrings.cabal
src/: Help.hs
src/Help/: Docstring.hs
src/Help/Docstring/: Docs.hs  Internal.hs
