name:                docstrings
version:             0.1.0.0
synopsis:            Docstrings for access in the repl
description:         Doctsrings for access in the repl
homepage:            https://github.com/daig/docstrings#readme
license:             MIT
license-file:        LICENSE
author:              Dai
maintainer:          dailectic@gmail.com
copyright:           2017 Dai
category:            Documentation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Help, Help.Docstring
  other-modules:       Help.Docstring.Internal
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,template-haskell
                      ,heredoc
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/daig/docstrings
